--- a/package.json
+++ b/package.json
@@ -13,5 +13,8 @@
     "botkit": "^4.10.0",
     "dotenv": "^7.0.0",
     "node-nlp": "^4.17.2"
+  },
+  "devDependencies": {
+    "prettier": "2.2.1"
   }
 }
