--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
   "scripts": {
     "start": "node bot.js",
     "test": "echo \"Error: no test specified\" && exit 1",
-    "train": "node train"
+    "train": "node train",
+    "smalltalk": "node train/smalltalk"
   },
   "dependencies": {
     "botbuilder-adapter-slack": "^1.0.13",
@@ -15,6 +16,7 @@
     "node-nlp": "^4.17.2"
   },
   "devDependencies": {
+    "csv-parse": "^4.14.2",
     "prettier": "2.2.1"
   }
 }
