--- a/package.json
+++ b/package.json
@@ -3,6 +3,8 @@
   "version": "1.0.0",
   "description": "",
   "main": "bot.js",
+  "repository": "https://github.com/notquiterussell/slackbot",
+  "license": "Apache-2.0",
   "scripts": {
     "start": "node bot.js",
     "test": "echo \"Error: no test specified\" && exit 1",
