Adds microsoft bot handling

--- a/.gitignore
+++ b/.gitignore
@@ -1,7 +1,7 @@
 .env
 model.nlp
-/train/smalltalk/smalltalk-private.json
-/train/smalltalk/smalltalk-public.json
+/train/smalltalk/*.json
+/train/qna/*.json
 
 # Created by https://www.toptal.com/developers/gitignore/api/macos,intellij+all,node
 # Edit at https://www.toptal.com/developers/gitignore?templates=macos,intellij+all,node
