--- a/.gitignore
+++ b/.gitignore
@@ -2,6 +2,7 @@
 model.nlp
 /train/smalltalk/*.json
 /train/qna/*.json
+/lib
 
 # Created by https://www.toptal.com/developers/gitignore/api/macos,intellij+all,node
 # Edit at https://www.toptal.com/developers/gitignore?templates=macos,intellij+all,node
