--- a/package.json
+++ b/package.json
@@ -8,7 +8,8 @@
   "scripts": {
     "slack": "node slack.js",
     "microsoft": "node microsoft.js",
-    "test": "echo \"Error: no test specified\" && exit 1",
+    "build": "tsc",
+    "test": "jest",
     "train": "node train",
     "smalltalk": "node train/smalltalk",
     "qna": "node train/qna",
@@ -17,13 +18,15 @@
   "dependencies": {
     "botbuilder": "^4.11.0",
     "botbuilder-adapter-slack": "^1.0.13",
-    "botbuilder-nlpjs": "^1.0.3",
+    "botbuilder-nlpjs": "^1.0.4",
     "dotenv": "^7.0.0",
     "node-nlp": "^4.17.2",
-    "restify": "^8.5.1"
+    "restify": "^8.5.1",
+    "typescript": "^4.1.3"
   },
   "devDependencies": {
     "csv-parse": "^4.14.2",
+    "jest": "^26.6.3",
     "npm-force-resolutions": "0.0.3",
     "prettier": "2.2.1"
   },
