--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "build": "tsc",
     "test": "jest",
     "train": "node train",
+    "actions": "node train/actions",
     "smalltalk": "node train/smalltalk",
     "qna": "node train/qna",
     "preinstall": "npx npm-force-resolutions"
