--- a/package.json
+++ b/package.json
@@ -6,8 +6,8 @@
   "repository": "https://github.com/notquiterussell/slackbot",
   "license": "Apache-2.0",
   "scripts": {
-    "slack": "node slack.js",
-    "microsoft": "node microsoft.js",
+    "slack": "nodemon lib/slack.js",
+    "microsoft": "nodemon lib/microsoft.js",
     "build": "tsc",
     "test": "jest",
     "train": "node train",
@@ -28,6 +28,7 @@
   "devDependencies": {
     "csv-parse": "^4.14.2",
     "jest": "^26.6.3",
+    "nodemon": "^2.0.7",
     "npm-force-resolutions": "0.0.3",
     "prettier": "2.2.1"
   },
