Adds examples to the example environment. Adds a sample multi-turn behaviour when the user asks 'ama'

--- a/.env.example
+++ b/.env.example
@@ -5,10 +5,17 @@ REDIRECT_URI=
 CLIENT_ID=
 CLIENT_SECRET=
 
-# Announce the arrival of the bot on the team and channel
+# Announce the arrival of the bot on the team and channel. Leave these blank if your bot is in a lambda
+# or you will get an announcement every time someone speaks to the bot
+# My slack team name, for example superbot
 MYTEAM=
+# The channel to announce itself on when starting, for example general
 MYCHAN=
 
 # Ancilliary services
+# The URL of your persistence service for conversations. For example: mongodb://localhost:27017/mybot
 MONGO_URI=
+# The URL of Ducking, if you want better entity detection. For example: http://localhost:8000/parse
 DUCKLING_URL=
+# The location of the model that natural.js is to use
+MODEL=./features/private.json
