--- a/package.json
+++ b/package.json
@@ -10,27 +10,21 @@
     "microsoft": "nodemon lib/microsoft.js",
     "build": "tsc",
     "test": "jest",
-    "train": "node train",
-    "actions": "node train/actions",
-    "smalltalk": "node train/smalltalk",
-    "qna": "node train/qna",
-    "preinstall": "npx npm-force-resolutions"
+    "train": "node train"
   },
   "dependencies": {
     "@botbuildercommunity/storage-mongodb": "^1.0.1",
     "botbuilder": "^4.11.0",
     "botbuilder-adapter-slack": "^1.0.13",
-    "botbuilder-nlpjs": "^1.0.4",
+    "botbuilder-nlpjs": "^1.1.1",
     "dotenv": "^7.0.0",
-    "node-nlp": "^4.17.2",
     "restify": "^8.5.1",
     "typescript": "^4.1.3"
   },
   "devDependencies": {
-    "csv-parse": "^4.14.2",
+    "csv-parser": "^3.0.0",
     "jest": "^26.6.3",
     "nodemon": "^2.0.7",
-    "npm-force-resolutions": "0.0.3",
     "prettier": "2.2.1"
   },
   "resolutions": {
