--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "botbuilder-adapter-slack": "^1.0.14",
     "botbuilder-nlpjs": "^1.1.1",
     "dotenv": "^16.0.1",
+    "request": "^2.88.2",
     "restify": "^8.6.1",
     "typescript": "^4.7.4"
   },
@@ -30,5 +31,4 @@
   "overrides": {
     "xlsx": "^0.18.5"
   }
-
 }
